# lkd

./: .gitignore  CMakeLists.txt  README.md  clean.sh  create-iso.sh  grub.cfg  lkd.ld  run-test.sh  shell.nix
initrd/: test_one  test_two
src/: CMakeLists.txt  boot.S  main.cpp
src/devices/: keyboard.cpp  timer.cpp
src/devices/includes/: keyboard.hpp  timer.hpp
src/gdt/: gdt.cpp  gdt_load.S  tss_load.S
src/gdt/includes/: gdt.hpp
src/includes/: gdt.hpp  idt.hpp  io.hpp  pmm.hpp  serial.hpp  utils.hpp
src/includes/utils/: bitmap.hpp
src/interrupts/: handlers.cpp  idt.cpp  irq.S  isr.S  pic.cpp
src/interrupts/includes/: idt.hpp  interrupt_state.hpp  pic.hpp
src/loader/: loader.cpp
src/loader/includes/: loader.hpp
src/outputs/: serial.cpp
src/paging/: paging.cpp
src/paging/includes/: paging.hpp
src/pmm/: pmm.cpp
src/pmm/includes/: pmm.hpp
src/serial/: serial.cpp  vga.cpp
src/serial/includes/: serial.hpp  vga.hpp
src/userland/: enter_userland.S  process.cpp  syscalls.cpp
src/userland/includes/: process.hpp  syscalls.hpp
src/utils/: bitmap.cpp  string.cpp  tar.cpp
src/utils/includes/: bitmap.hpp  string.hpp  tar.hpp
src/vmm/: bucket.cpp  kmalloc.cpp  kmalloc_utils.cpp  paging.cpp
src/vmm/includes/: bucket.hpp  kmalloc.hpp  kmalloc_utils.hpp  paging.hpp
test/: CMakeLists.txt  bitmap_test.cpp  test.cpp
